--- a/src/components/DrinkCard.css
+++ b/src/components/DrinkCard.css
@@ -1,13 +1,20 @@
 .card {
-  background: white;
-  margin-bottom: 2em;
+  width: 150px;
+  height: auto;
+  text-align: center;
+  margin: 20px 40px;
+  font-size: 50%;
   width: 10rem;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  border: 3px solid #228dff;
+  box-shadow: 0 0 50px #228dff;
+  background-color: #0c192c;
 }
-
+.card-title {
+  font-size: 2em;
+  font-family: lato;
+  color: #228dff;
+  padding-top: 10px;
+}
 .card img {
   display: block;
   border: 0;
@@ -15,6 +22,11 @@
   height: auto;
 }
 
-.card h2 {
-  font-size: 2em;
+.card:hover {
+  box-shadow: 0 0 20px #ba01ff;
+  border: 3px solid #ba01ff;
+}
+
+.card-title:hover {
+  color: #ba01ff;
 }
