eslint-check-on-DrinkCard-RandomDrinks-App

--- a/src/components/DrinkCard.css
+++ b/src/components/DrinkCard.css
@@ -6,12 +6,12 @@
   font-size: 50%;
   width: 10rem;
   border: 3px solid #228dff;
-  box-shadow: 0 0 50px #228dff;
+  box-shadow: 0 0 30px #228dff;
   background-color: #0c192c;
 }
 .card-title {
   font-size: 2em;
-  font-family: lato;
+  font-family: lato, Arial, Helvetica, sans-serif;
   color: #228dff;
   padding-top: 10px;
 }
