--- a/src/components/SearchLogo.css
+++ b/src/components/SearchLogo.css
@@ -21,6 +21,14 @@
   width: 300px;
 }
 
+.valid {
+  border: 1px solid rgb(211, 211, 211);
+}
+
+.error {
+  border: 1px solid red;
+}
+
 @media (max-width: 640px) {
   .select-input {
     margin: 3px 0px 3px 60px;
