--- a/src/components/SearchLogo.css
+++ b/src/components/SearchLogo.css
@@ -1,10 +1,16 @@
+/* back #0C192C */
+/* roxo #BA01FF */
+/* amarelo #B6FF00 */
+/* azul-claro #228DFF */
+/* rosa #FF0092 */
+
 .SearchLogo {
   background-color: #0c192c;
   padding: 30px 0px 30px 0px;
 }
 
-.search {
-  padding: 10px;
+.search-section {
+  padding: 0px 10px 10px 10px;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -22,26 +28,19 @@
 
 .select-input {
   width: 250px;
-  margin: 5px 0px;
+  margin: 0px 0px 5px 0px;
 }
 
 .search-input {
   width: 250px;
-  margin: 5px 0px;
+  margin: 0px 0px 5px 0px;
 }
 
 Button {
-  margin: 5px;
+  margin: 0px 0px 5px 0px;
   background-color: #ba01ff !important;
   border: 1px solid #ba01ff !important;
-  /* background-color: #228dff !important;
-  border: 1px solid #228dff !important; */
 }
-/* back #0C192C */
-/* roxo #BA01FF */
-/* amarelo #B6FF00 */
-/* azul-claro #228DFF */
-/* rosa #FF0092 */
 
 .divImagem {
   justify-content: center;
@@ -49,19 +48,38 @@ Button {
   display: flex;
 }
 
-img {
-  width: 250px;
-  height: 250px;
+.logo-image {
+  width: 200px;
+  height: 200px;
   margin: 20px;
   box-shadow: 0 0 20px #b6ff00;
 }
 
-img:hover {
+.bar-image {
+  width: 30%;
+}
+
+.logo-image:hover {
   box-shadow: 0 0 20px #ba01ff;
+}
+
+@media (max-width: 1000px) {
+  .bar-image {
+    width: 40%;
+  }
+}
+
+@media (max-width: 800px) {
+  .bar-image {
+    width: 55%;
+  }
 }
 
 @media (max-width: 680px) {
   .search-group {
     width: 250px;
+  }
+  .bar-image {
+    width: 70%;
   }
 }
