--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,15 +1,16 @@
 .footer {
+  margin-top: 80px;
   width: 100%;
-  font-size: 20px;
-  height: 100px;
+  font-size: 18px;
+  height: 80px;
   color: #228dff;
-  background-color: #0c192c;
+  background-color: #4e0668;
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
   vertical-align: middle;
-  border-style: solid;
-  border-color: #ba01ff;
+  /* border-top: 2px solid #0c192c; */
 }
 
 .footer a {
