--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,16 +1,23 @@
 .footer {
   margin-top: 80px;
   width: 100%;
-  font-size: 18px;
-  height: 80px;
+  font-size: 15px;
+  height: auto;
   color: #228dff;
   background-color: #4e0668;
   display: flex;
+  flex-direction: row;
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
   vertical-align: middle;
-  /* border-top: 2px solid #0c192c; */
+}
+
+.about-wcs {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-around;
 }
 
 .footer a {
@@ -20,4 +27,24 @@
 
 .footer a:hover {
   color: #ba01ff;
+}
+
+.imgFooter-div {
+  justify-content: center;
+  align-items: center;
+  display: flex;
+}
+
+.imgFooter-div img {
+  text-align: center;
+}
+.logo-img:hover {
+  box-shadow: 0 0 20px #b6ff00;
+}
+
+.logo-img {
+  width: 90px;
+  height: 90px;
+  margin: 20px;
+  box-shadow: 0 0 20px #ba01ff;
 }
