--- a/src/components/DrinkCard/DrinkCard.css
+++ b/src/components/DrinkCard/DrinkCard.css
@@ -1,4 +1,5 @@
 .card {
+  cursor: pointer;
   width: 150px;
   height: auto;
   text-align: center;
@@ -29,4 +30,11 @@
 
 .card-title:hover {
   color: #ba01ff;
+}
+
+@media (max-width: 768px) {
+  .card {
+    width: 8rem;
+    margin: 20px 20px;
+  }
 }
