--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -43,8 +43,8 @@
 }
 
 .logo-img {
-  width: 90px;
-  height: 90px;
+  width: 60px;
+  height: auto;
   margin: 20px;
   box-shadow: 0 0 20px #ba01ff;
 }
