--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,19 +1,21 @@
 .Header {
   background-color: #0c192c;
+  margin: 50px 0px 0px 0px;
 }
 
 .images-section {
   display: flex;
   flex-wrap: wrap;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
   margin: 10px;
 }
 
 .header-logo {
-  width: 200px;
-  height: 200px;
-  margin: 20px;
+  width: 140px;
+  height: 140px;
+  margin: 20px 20px 20px 20px;
   box-shadow: 0 0 20px #b6ff00;
 }
 
@@ -22,38 +24,36 @@
 }
 
 .header-image {
-  width: 250px;
-  height: 120px;
+  width: 600px;
+  height: auto;
+  margin: 30px 30px 30px 80px;
 }
 
-/* BUTTON TO HOMEPAGE */
-
-.arrow-button {
-  cursor: pointer;
-  width: 90px;
-  height: 45px;
-  margin: 0px 0px 0px 70px;
-  background-image: url("https://i.imgur.com/zlQpDFX.png");
-  background-size: 90px 45px;
-}
-
-.arrow-button:hover {
-  background-image: url("https://imgur.com/dYIixX2.png");
-}
-
-@media (max-width: 500px) {
-  .header-logo {
-    width: 120px;
-    height: 120px;
+@media (max-width: 1200px) {
+  .images-section {
+    justify-content: space-evenly;
   }
   .header-image {
-    width: 190px;
-    height: 100px;
+    width: 500px;
+    height: auto;
+    margin: 0px;
   }
+  .header-logo {
+    width: 140px;
+    height: 140px;
+    margin: 0px;
+  }
+}
 
-  .arrow-button {
-    width: 60px;
-    height: 30px;
-    background-size: 60px 30px;
+@media (max-width: 768px) {
+  .header-logo {
+    width: 100px;
+    height: 100px;
+    margin: 0px;
+  }
+  .header-image {
+    width: 240px;
+    height: 70px;
+    margin: 0px;
   }
 }
