--- a/src/components/DrinkInformation/DrinkInformation.css
+++ b/src/components/DrinkInformation/DrinkInformation.css
@@ -79,6 +79,9 @@
   .drink-image {
     width: 150px;
   }
+  .Drink {
+    font-size: 28px;
+  }
   .Ingredients {
     margin-left: 20px;
     justify-content: center;
