filter button added

--- a/src/components/DrinkInformation/DrinkInformation.css
+++ b/src/components/DrinkInformation/DrinkInformation.css
@@ -6,11 +6,6 @@
   color: #b6ff00;
 }
 
-.title-section {
-  display: flex;
-  flex-direction: row;
-}
-
 .first-section {
   display: flex;
   flex-direction: row;
@@ -19,7 +14,7 @@
 }
 
 .Image {
-  padding: 0px 30px;
+  padding: 10px 30px 0px 30px;
   display: flex;
   justify-content: left;
   margin-bottom: 30px;
@@ -53,9 +48,6 @@
 .ingredient-text {
   font-size: 20px;
 }
-/* .recipe-title {
-  margin-left: 110px;
-} */
 
 .recipe-text {
   font-size: 20px;
@@ -78,6 +70,7 @@
   }
   .Image {
     justify-content: center;
+    margin-bottom: 20px;
   }
   .Method {
     margin-left: 0px;
