--- a/src/components/ResultsPage/ResultsPage.css
+++ b/src/components/ResultsPage/ResultsPage.css
@@ -8,7 +8,7 @@
   color: #b6ff00;
   margin-left: 15px;
   font-size: 40px;
-  margin: 10px 0px 20px 20px;
+  margin: 10px 0px 0px 20px;
 }
 
 .title-section {
@@ -19,6 +19,7 @@
 }
 
 .arrow-button {
+  margin-top:10px;
   cursor: pointer;
   width: 60px;
   height: 45px;
@@ -30,20 +31,41 @@
   background-image: url('https://imgur.com/dYIixX2.png');
 }
 
+.filter-section {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  align-items: center;
+  color: #228dff;
+  font-size: 14px;
+  margin: 0px 130px 10px 0px;
+}
+
+.filter {
+  margin: 0px 10px;
+}
+
 @media (max-width: 550px) {
   .main-title {
-    margin-top: 20px;
+    margin-top: 10px;
     font-size: 28px;
   }
 
   .title-section {
+    margin-top: 0px;
     margin-left: 40px;
   }
 
   .arrow-button {
+    margin-top: 10px;
     cursor: pointer;
     width: 45px;
     height: 30px;
     background-size: 45px 30px;
+  }
+
+  .filter-section {
+    margin: 10px 0px 5px 0px;
+    justify-content: center;
   }
 }
