--- a/src/components/RandomDrinks/RandomDrinks.css
+++ b/src/components/RandomDrinks/RandomDrinks.css
@@ -1,8 +1,4 @@
-body {
-  background-color: #0c192c;
-}
-
-.section {
+.random-section {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
