--- a/src/components/ResultsPage/ResultsPage.css
+++ b/src/components/ResultsPage/ResultsPage.css
@@ -3,6 +3,13 @@
   src: url(../../assets/Grotters.ttf);
 }
 
+.results-section {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
 .main-title {
   font-family: Grotters;
   color: #b6ff00;
@@ -19,7 +26,7 @@
 }
 
 .arrow-button {
-  margin-top:10px;
+  margin-top: 10px;
   cursor: pointer;
   width: 60px;
   height: 45px;
