--- a/src/components/ShareInfo/ShareInfo.css
+++ b/src/components/ShareInfo/ShareInfo.css
@@ -12,7 +12,7 @@
   font-size: 16px;
 }
 
-.share-icon {
+.share-button {
   margin-right: 5px;
 }
 
@@ -20,7 +20,7 @@
   .share-section {
     margin-top: 30px;
   }
-  .share-icon {
+  .share-button {
     width: 26px;
   }
   .share-label {
