--- a/src/components/DrinkInformation/DrinkInformation.css
+++ b/src/components/DrinkInformation/DrinkInformation.css
@@ -28,7 +28,7 @@
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
-  align-content: center;
+  align-items: center;
 }
 
 .drink-image {
@@ -48,6 +48,10 @@
 
 .ingredient-text {
   font-size: 20px;
+}
+
+.recipe-title {
+  width: 75%;
 }
 
 .recipe-text {
