--- a/src/components/ShareInfo/ShareInfo.css
+++ b/src/components/ShareInfo/ShareInfo.css
@@ -20,10 +20,10 @@
   .share-section {
     margin-top: 30px;
   }
-  .share-button {
-    width: 26px;
+  .share-icon {
+    width: 28px;
   }
   .share-label {
-    font-size: 14px;
+    font-size: 16px;
   }
 }
